tests/fixtures/invalid/array_compound_literal_string_too_long.c
int main(void) {
    char *word = (char[3]){"four"};
    return word[0];
}
